Finally fully workable version of ergo node CI-CD script for Jenkins